syntax = "proto3";
package DomainServices.DocumentOnSAService;
option csharp_namespace = "DomainServices.DocumentOnSAService.Contracts";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "Enums.proto";

message DocumentOnSAToSign {

	// Unikátní identifikátor DocumentuOnSA
	google.protobuf.Int32Value DocumentOnSAId = 1;
	
	google.protobuf.Int32Value DocumentTypeId = 2;

	google.protobuf.Int32Value DocumentTemplateVersionId = 3;

	string FormId = 4;

	string EArchivId = 5;

	string DmsxId = 6;

	int32 SalesArrangementId = 7;

	google.protobuf.Int32Value HouseholdId = 8;

	bool IsValid = 9;

	bool IsSigned = 10;
	
	bool IsArchived = 11;

	google.protobuf.StringValue SignatureMethodCode = 12;
	
	google.protobuf.Timestamp SignatureDateTime = 13;

	google.protobuf.Int32Value SignatureConfirmedBy = 14;

	bool IsFinal = 15;

	google.protobuf.Int32Value DocumentTemplateVariantId = 16;

	google.protobuf.Int32Value SignatureTypeId = 17;
	
	DomainServices.DocumentOnSAService.Enums.Source Source = 18;

	google.protobuf.Int32Value CustomerOnSAId = 19;

	bool IsPreviewSentToCustomer = 20;

	google.protobuf.Int64Value CaseId = 21;

	google.protobuf.Int32Value TaskId = 22;

}